fix search box width on mobile
it was too wide and forced a horizontal scrollbar

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -345,8 +345,6 @@ header{
   z-index: 4;
 }
 .search-wrap div:first-child {
-    min-width: 23em; // initial width, overridden in JS according to search term length
-    max-width: 99vw;
     margin:0 auto;
     color:$primary;
     opacity: 0.95;
@@ -362,6 +360,8 @@ header{
     border-radius:3px;
     -webkit-box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    min-width: 19em; // initial width, overridden in JS according to search term length
+    max-width: 99vw;
 }
 
 .search-input {
